魔方自动还原 第二步底棱归位 初步完成

--- a/step5.html
+++ b/step5.html
@@ -77,6 +77,10 @@
             	var cube4 = getCubeByIndex(4);
             	var cube11 = getCubeByIndex(11);
             	var cube14 = getCubeByIndex(14);
+            	var cube19 = getCubeByIndex(19);
+            	var cube22 = getCubeByIndex(22);
+            	var cube9 = getCubeByIndex(9);
+            	var cube12 = getCubeByIndex(12);
             	if(getFaceColorByVector(cube1,yLine)==bottomColor){
             		if(getFaceColorByVector(cube1,zLine)==getFaceColorByVector(cube4,zLine)){
             			normalize = yLine;
@@ -92,8 +96,34 @@
             		if(getFaceColorByVector(cube11,xLine)==getFaceColorByVector(cube14,xLine)){
             			normalize = yLine;
             			rotateMove(cube11,zLineAd,function(){
-
+            				normalize = zLineAd;
+            				rotateMove(cube11,yLineAd);
             			});
+            		}else{
+            			normalize = xLine;
+            			rotateMove(cube11,zLineAd);
+            		}
+            	}else if(getFaceColorByVector(cube19,yLine)==bottomColor){
+            		if(getFaceColorByVector(cube19,zLineAd)==getFaceColorByVector(cube22,zLineAd)){
+            			normalize = yLine;
+            			rotateMove(cube19,xLineAd,function(){
+            				normalize = xLineAd;
+            				rotateMove(cube19,yLineAd);
+            			});
+            		}else{
+            			normalize = zLineAd;
+            			rotateMove(cube19,xLineAd);
+            		}
+            	}else if(getFaceColorByVector(cube9,yLine)==bottomColor){
+            		if(getFaceColorByVector(cube9,xLineAd)==getFaceColorByVector(cube12,xLineAd)){
+            			normalize = yLine;
+            			rotateMove(cube9,zLine,function(){
+            				normalize = zLine;
+            				rotateMove(cube9,yLineAd);
+            			});
+            		}else{
+            			normalize = xLineAd;
+            			rotateMove(cube9,zLine);
             		}
             	}
             }
@@ -696,6 +726,9 @@
                 			switch(currentStep){
 	                			case 1:
 	                				step1();
+	                				break;
+                				case 2:
+	                				step2();
 	                				break;
 	                			default:
 	                				break;
